--- a/src/spec/spec_helper.rb.tt
+++ b/src/spec/spec_helper.rb.tt
@@ -32,6 +32,8 @@ Spork.prefork do
   include <%= app_name.camelize %>
 
   RSpec.configure do |config|
+    config.include Rgentpl::Helper::Assertions
+
     config.mock_with :rspec
 
     config.order = 'random'
