--- a/src/spec/spec_helper.rb.tt
+++ b/src/spec/spec_helper.rb.tt
@@ -4,7 +4,7 @@ require 'rubygems'
 require 'spork'
 require 'pry'
 
-require 'spork/ext/ruby-debug'
+#require 'spork/ext/ruby-debug'
 
 Spork.prefork do
   # Loading more in this block will cause your tests to run faster. However,
@@ -15,12 +15,11 @@ Spork.prefork do
 
   unless ENV['DRB']
     require 'simplecov'
-    require 'simplecov-gem-adapter'
+    require 'simplecov-gem-profile'
     SimpleCov.start 'gem'
   end
 
   require 'rspec'
-  require 'rspec/autorun'
   require 'capybara'
 
   require File.dirname(__FILE__) + '/../config/environment.rb'
@@ -34,7 +33,8 @@ Spork.prefork do
   RSpec.configure do |config|
     config.include <%= app_name.camelize %>::Helper::Assertions
 
-    config.mock_with :rspec
+    config.mock_framework
+    #config.raise_errors_for_deprecations!
 
     config.order = 'random'
   end
@@ -44,7 +44,7 @@ Spork.each_run do
   # This code will be run each time you run your specs.
   unless ENV['DRB']
     require 'simplecov'
-    require 'simplecov-gem-adapter'
+    require 'simplecov-gem-profile'
     SimpleCov.start 'gem'
   end
 end
