Update gems (metrics, tasks).

--- a/src/%app_name%.gemspec.tt
+++ b/src/%app_name%.gemspec.tt
@@ -4,7 +4,7 @@ Gem::Specification.new do |gem|
   gem.name          = "<%= app_name %>"
   gem.version       = <%= app_name.camelize %>::VERSION
   gem.platform      = Gem::Platform::RUBY
-  gem.date          = '2014-02-02'
+  gem.date          = '2015-04-05'
   gem.summary       = %q{<%= app_name.camelize %>}
   gem.description   = %q{<%= app_name.camelize %>}
   gem.license       = "MIT"
@@ -26,12 +26,13 @@ Gem::Specification.new do |gem|
   gem.add_development_dependency 'growl'
   gem.add_development_dependency 'listen'
   gem.add_development_dependency 'guard'
-  gem.add_development_dependency 'guard-bundler', '>= 1.0.0'
-  gem.add_development_dependency 'guard-rspec', '>= 2.5.2'
+  gem.add_development_dependency 'guard-bundler'
+  gem.add_development_dependency 'guard-rspec'
   gem.add_development_dependency 'guard-spork'
   gem.add_development_dependency 'guard-rubocop'
   gem.add_development_dependency 'guard-yard'
   gem.add_development_dependency 'guard-cane'
+  gem.add_development_dependency 'guard-rubycritic'
   gem.add_development_dependency 'rb-inotify', '>= 0.9.0'
   gem.add_development_dependency 'rb-fsevent', '>= 0.9.3'
   gem.add_development_dependency 'rb-fchange', '>= 0.0.6'
@@ -41,29 +42,31 @@ Gem::Specification.new do |gem|
   gem.add_development_dependency 'fastri'
   gem.add_development_dependency 'flay'
   gem.add_development_dependency 'flog'
-  gem.add_development_dependency 'yard', '~> 0.8'
+  gem.add_development_dependency 'rubycritic'
+  gem.add_development_dependency 'excellent'
+  gem.add_development_dependency 'yard'
+  gem.add_development_dependency 'sdoc'
+  gem.add_development_dependency 'sdoc-templates-42floors'
   gem.add_development_dependency 'redcarpet'
-  gem.add_development_dependency 'rspec'
+  gem.add_development_dependency 'rspec', '>= 3.2'
   gem.add_development_dependency 'spork'
-  gem.add_development_dependency 'rake'
-  gem.add_development_dependency 'debugger'
   gem.add_development_dependency 'simplecov'
-  gem.add_development_dependency 'simplecov-gem-profile'
+  gem.add_development_dependency 'simplecov-gem-adapter'
+  gem.add_development_dependency 'selenium-webdriver'
   gem.add_development_dependency 'launchy'
   gem.add_development_dependency 'capybara'
   gem.add_development_dependency 'webrat'
-  gem.add_development_dependency 'rspec-nc'
+  gem.add_development_dependency 'rspec-nc', '>= 0.2.0'
   gem.add_development_dependency 'rspec-abhakungszeichen-formatter'
   gem.add_development_dependency 'nyan-cat-formatter'
-  gem.add_development_dependency 'fuubar'
+  gem.add_development_dependency 'fuubar', '>= 2.0.0'
   gem.add_development_dependency 'ffaker'
+  gem.add_development_dependency 'byebug'
   gem.add_development_dependency 'pry'
   gem.add_development_dependency 'pry-doc'
-  gem.add_development_dependency 'pry-remote'
-  gem.add_development_dependency 'pry-remote-auto'
-  gem.add_development_dependency 'pry-debugger'
+  gem.add_development_dependency 'pry-byebug'
   gem.add_development_dependency 'awesome_print'
   gem.add_development_dependency 'colorize'
-  gem.add_development_dependency 'bcrypt'
+  gem.add_development_dependency 'bcrypt-ruby'
 
 end
