--- a/src/spec/lib/%app_name%/boot/application_spec.rb.tt
+++ b/src/spec/lib/%app_name%/boot/application_spec.rb.tt
@@ -3,7 +3,10 @@ require 'spec_helper'
 describe <%= app_name.camelize %>::Application do
   describe '#exec' do
     it 'executes application' do
-      expect { <%= app_name.camelize %>::Application.exec }.to change { STDOUT }
+      stdout = capture_stdout do
+        <%= app_name.camelize %>::Application.exec
+      end
+      expect(stdout).to match /Commands:/
     end
   end
 end
