Add executables in gemspec file.

--- a/src/%app_name%.gemspec.tt
+++ b/src/%app_name%.gemspec.tt
@@ -11,6 +11,7 @@ Gem::Specification.new do |gem|
   gem.authors       = ["Julio Antúnez Tarín"]
   gem.email         = "julio.antunez.tarin@gmail.com"
   gem.homepage      = "https://github.com/jatap/<%= app_name %>#readme"
+  gem.executables   = ["<%= app_name %>"]
 
   gem.files         = `git ls-files`.split($/)
   gem.executables   = gem.files.grep(%r{^bin/}).map{ |f| File.basename(f) }
