--- a/src/spec/lib/%app_name%/command/base_spec.rb.tt
+++ b/src/spec/lib/%app_name%/command/base_spec.rb.tt
@@ -12,26 +12,16 @@ describe <%= app_name.camelize %>::Command::Base do
   end
 
   describe 'given a help option' do
-    before do
-      @help = capture_stdout do
-        <%= app_name.camelize %>::Command::Base.help(Thor::Base.shell.new)
-      end
-    end
-
     it 'shows help info' do
-      expect(@help).to match(/help/)
+      expect { <%= app_name.camelize %>::Command::Base.help(Thor::Base.shell.new) }.to \
+        output(/help/).to_stdout
     end
   end
 
   describe 'given a version option' do
-    before do
-      @version = capture_stdout do
-        <%= app_name.camelize %>::Command::Base.start %W[ version ]
-      end
-    end
-
     it 'shows version info' do
-      expect(@version).to match(/version/)
+      expect { <%= app_name.camelize %>::Command::Base.start %W[ vrsion ] }.to \
+        output(/help/).to_stdout
     end
   end
 end
