--- a/src/lib/%app_name%/core_ext/string.rb.tt
+++ b/src/lib/%app_name%/core_ext/string.rb.tt
@@ -2,7 +2,20 @@
 module <%= app_name.camelize %>
   # Core Extensions
   module CoreExt
-   # String.class_eval do
-   # end
+    String.class_eval do
+      # Camelize
+      #
+      # @return [String] the camelized string
+      def camelize
+        split(/\s|-|_/).each(&:capitalize!).join('')
+      end
+
+      # Camelize!
+      #
+      # @return [String] the camelized string
+      def camelize!
+        replace(split(/\s|-|_/).each(&:capitalize!).join(''))
+      end
+    end
   end
 end
