--- a/src/lib/%app_name%.rb.tt
+++ b/src/lib/%app_name%.rb.tt
@@ -6,14 +6,14 @@ require 'logger'
 module <%= app_name.camelize %>
   # Loading core extensions
   Dir["#{File.dirname(__FILE__)}/../lib/<%= app_name %>/core_ext/*.rb"]
-    .each do |f|
-    require f
+    .each do |file|
+    require file
   end
 
   # Loading exception
   Dir["#{File.dirname(__FILE__)}/../lib/<%= app_name %>/exception/*.rb"]
-    .each do |f|
-    require f
+    .each do |file|
+    require file
   end
 
   require_relative '<%= app_name %>/version'
