--- a/src/lib/%app_name%/command/base.rb.tt
+++ b/src/lib/%app_name%/command/base.rb.tt
@@ -8,7 +8,7 @@ module <%= app_name.camelize %>
     #
     # General command
     class Base < Thor
-      package_name "<%= app_name.camelize %>"
+      package_name '<%= app_name.camelize %>'
       map '-v' => :version
 
       desc 'version, -v', 'Show <%= app_name.camelize %> version.'
