Clean code (deploy).

--- a/src/%app_name%.gemspec.tt
+++ b/src/%app_name%.gemspec.tt
@@ -4,7 +4,7 @@ Gem::Specification.new do |gem|
   gem.name          = "<%= app_name %>"
   gem.version       = <%= app_name.camelize %>::VERSION
   gem.platform      = Gem::Platform::RUBY
-  gem.date          = '2015-04-05'
+  gem.date          = '2015-05-17'
   gem.summary       = %q{<%= app_name.camelize %>}
   gem.description   = %q{<%= app_name.camelize %>}
   gem.license       = "MIT"
@@ -18,11 +18,11 @@ Gem::Specification.new do |gem|
   gem.test_files    = gem.files.grep(%r{^(test|spec|features)/})
   gem.require_paths = ['lib']
 
-  gem.add_dependency 'rake'
-  gem.add_dependency 'virtus'
-  gem.add_dependency 'thor'
+  gem.add_runtime_dependency 'rake'
+  gem.add_runtime_dependency 'virtus'
+  gem.add_runtime_dependency 'thor'
 
-  gem.add_development_dependency 'bundler', '>= 1.0'
+  gem.add_development_dependency 'bundler', '>= 1.7'
   gem.add_development_dependency 'ruby_gntp'
   gem.add_development_dependency 'growl'
   gem.add_development_dependency 'listen'
@@ -67,5 +67,8 @@ Gem::Specification.new do |gem|
   gem.add_development_dependency 'awesome_print'
   gem.add_development_dependency 'colorize'
   gem.add_development_dependency 'bcrypt-ruby'
+  gem.add_development_dependency 'capistrano', '>= 3.4.0'
+  gem.add_development_dependency 'capistrano-rvm'
+  gem.add_development_dependency 'capistrano-bundler', '>= 1.1.2'
 
 end
