--- a/src/config/environment.rb.tt
+++ b/src/config/environment.rb.tt
@@ -1,5 +1,5 @@
 # Environment
-TEMPLATE_ENV ||= ENV['TEMPLATE_ENV'] ||= 'development'
+ENV['TEMPLATE_ENV'] ||= 'development'
 
 # Boot up
 require File.join(File.dirname(__FILE__), 'boot')
