--- a/src/spec/lib/%app_name%/boot/application_spec.rb.tt
+++ b/src/spec/lib/%app_name%/boot/application_spec.rb.tt
@@ -3,10 +3,8 @@ require 'spec_helper'
 describe <%= app_name.camelize %>::Application do
   describe '#exec' do
     it 'executes application' do
-      # Fix rake_taks bug
-      ARGV = []
-
-      expect { <% app_name.camelize %>::Application.exec }.to \
+      ARGV = [] # standard:disable Lint/ConstantDefinitionInBlock
+      expect { <%= app_name.camelize %>::Application.exec }.to \
         output(/commands:/).to_stdout
     end
   end
