--- a/src/spec/lib/%app_name%/boot/initializer_spec.rb.tt
+++ b/src/spec/lib/%app_name%/boot/initializer_spec.rb.tt
@@ -3,7 +3,7 @@ require 'spec_helper'
 describe <%= app_name.camelize %>::Initializer do
   describe '#build' do
     it 'loads enviroment' do
-      expect(<%= app_name.camelize %>.env).to eq TEMPLATE_ENV
+      expect(<%= app_name.camelize %>.env).to eq ENV["TEMPLATE_ENV"]
     end
 
     context 'given initializers' do
